--- a/parent-pom/pom.xml
+++ b/parent-pom/pom.xml
@@ -8,6 +8,7 @@
 	<properties>
 		<spring.version>4.0.0.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
+		<jpa.version>1.0.1.Final</jpa.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -28,6 +29,11 @@
 				<artifactId>spring-webmvc</artifactId>
 				<version>${spring.version}</version>
 			</dependency>
+<dependency>
+	<groupId>org.hibernate.javax.persistence</groupId>
+	<artifactId>hibernate-jpa-2.0-api</artifactId>
+	<version>${jpa.version}</version>
+</dependency>
 		</dependencies>
 	</dependencyManagement>
 
