--- a/parent-pom/pom.xml
+++ b/parent-pom/pom.xml
@@ -9,6 +9,7 @@
 		<spring.version>4.0.0.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<jpa.version>1.0.1.Final</jpa.version>
+		<datajpa.version>1.0.1.RELEASE</datajpa.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -34,6 +35,11 @@
 	<artifactId>hibernate-jpa-2.0-api</artifactId>
 	<version>${jpa.version}</version>
 </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>${datajpa.version}</version>           
+        </dependency>
 		</dependencies>
 	</dependencyManagement>
 
