--- a/parent-pom/service-api/pom.xml
+++ b/parent-pom/service-api/pom.xml
@@ -6,4 +6,11 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>service-api</artifactId>
+  <dependencies>
+  <dependency>
+		<groupId>es.microforum</groupId>
+		<artifactId>model</artifactId>
+		<version>0.0.1-SNAPSHOT</version>  
+</dependency>
+  </dependencies>
 </project>
