--- a/parent-pom/service-impl/pom.xml
+++ b/parent-pom/service-impl/pom.xml
@@ -6,4 +6,20 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>service-impl</artifactId>
+    <dependencies>
+	  <dependency>
+		<groupId>es.microforum</groupId>
+		<artifactId>model</artifactId>
+		<version>0.0.1-SNAPSHOT</version>  
+		</dependency>
+		<dependency>
+		<groupId>es.microforum</groupId>
+		<artifactId>service-api</artifactId>
+		<version>0.0.1-SNAPSHOT</version>  
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+		</dependency>
+	 </dependencies>
 </project>
