--- a/parent-pom/pom.xml
+++ b/parent-pom/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>es.microforum</groupId>
 	<artifactId>parent-pom</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>pom</packaging>
 	<properties>
 		<spring.version>4.0.0.RELEASE</spring.version>
@@ -16,6 +16,7 @@
 		<org.slf4j.version>1.7.5</org.slf4j.version>
 		<mysql.connector.version>5.1.6</mysql.connector.version>
 		<aspectj.version>1.5.4</aspectj.version>
+	    <logback.version>1.0.1</logback.version>		
 	</properties>
 	<dependencies>
 		<dependency>
@@ -97,6 +98,18 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>${org.slf4j.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>${logback.version}</version>
 		</dependency>
 			
 			<dependency>
