--- a/parent-pom/service-impl/pom.xml
+++ b/parent-pom/service-impl/pom.xml
@@ -3,19 +3,19 @@
   <parent>
     <groupId>es.microforum</groupId>
     <artifactId>parent-pom</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.2</version>
   </parent>
   <artifactId>service-impl</artifactId>
     <dependencies>
 	  <dependency>
 		<groupId>es.microforum</groupId>
 		<artifactId>model</artifactId>
-		<version>0.0.2-SNAPSHOT</version>  
+		<version>0.0.2</version>  
 		</dependency>
 		<dependency>
 		<groupId>es.microforum</groupId>
 		<artifactId>service-api</artifactId>
-		<version>0.0.2-SNAPSHOT</version>  
+		<version>0.0.2</version>  
 		</dependency>
 		<dependency>
 		    <groupId>org.springframework.data</groupId>
