--- a/parent-pom/pom.xml
+++ b/parent-pom/pom.xml
@@ -3,18 +3,19 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>es.microforum</groupId>
 	<artifactId>parent-pom</artifactId>
-	<version>0.0.2</version>
+	<version>0.0.3-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<properties>
 		<!-- <spring.version>4.0.0.RELEASE</spring.version> -->
-		<spring.version>3.2.6.RELEASE</spring.version>
-
+		<!-- <spring.version>3.2.6.RELEASE</spring.version> -->
+		<spring.version>3.2.1.RELEASE</spring.version>
 		<spring.test.version>4.0.0.RELEASE</spring.test.version>
 		<junit.version>4.11</junit.version>
 		<hibernate.version>3.6.8.Final</hibernate.version>
 		<jpa.version>1.0.1.Final</jpa.version>
 		<spring.data.commons.core.version>1.4.1.RELEASE</spring.data.commons.core.version>
-		<spring.jpa.data.version>1.2.0.RELEASE</spring.jpa.data.version>
+		<!-- <spring.jpa.data.version>1.2.0.RELEASE</spring.jpa.data.version> -->
+		<spring.jpa.data.version>1.3.0.RELEASE</spring.jpa.data.version>
 		<org.slf4j.version>1.7.5</org.slf4j.version>
 		<!-- <mysql.connector.version>5.1.6</mysql.connector.version> -->
 		<mysql.connector.version>5.1.28</mysql.connector.version>
@@ -28,15 +29,21 @@
 		<joda.time.jsptags.version>1.1.1</joda.time.jsptags.version>
 		<joda.time.version>2.3</joda.time.version>
 		<tiles.version>2.2.2</tiles.version>
-				<org.springsecurity-version>3.2.0.RELEASE</org.springsecurity-version>
-			<jackson-mapper-lgpl.version>1.9.13</jackson-mapper-lgpl.version>
-			<commons-io.version>2.1</commons-io.version>
-			<mockito-core.version>1.9.0</mockito-core.version>
-			<xercesImpl.version>2.10.0</xercesImpl.version>
-			<asm.version>3.1</asm.version>
-			<commons-fileupload.version>1.2</commons-fileupload.version>
-			<validation-api.version>1.0.0.GA</validation-api.version>
-			<hibernate-validator.version>4.2.0.Final</hibernate-validator.version>
+		<org.springsecurity-version>3.2.0.RELEASE</org.springsecurity-version>
+		<jackson-mapper-lgpl.version>1.9.13</jackson-mapper-lgpl.version>
+		<commons-io.version>2.1</commons-io.version>
+		<mockito-core.version>1.9.0</mockito-core.version>
+		<xercesImpl.version>2.10.0</xercesImpl.version>
+		<asm.version>3.1</asm.version>
+		<commons-fileupload.version>1.2</commons-fileupload.version>
+		<validation-api.version>1.0.0.GA</validation-api.version>
+		<hibernate-validator.version>4.2.0.Final</hibernate-validator.version>
+		<spring-data-rest-webmvc.version>1.1.0.M1</spring-data-rest-webmvc.version>
+		<hsqldb.version>2.2.8</hsqldb.version>
+		<javax.servlet-api.version>3.0.1</javax.servlet-api.version>
+		<commons-httpclient.version>3.1</commons-httpclient.version>
+		<hamcrest.version>1.3</hamcrest.version>
+		<junit-dep.version>4.10</junit-dep.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -202,80 +209,175 @@
 				<artifactId>tiles-jsp</artifactId>
 				<version>${tiles.version}</version>
 			</dependency>
-					<!-- JSON -->
-		<dependency>
-			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-mapper-lgpl</artifactId>
-			<version>${jackson-mapper-lgpl.version}</version>
-		</dependency>
+			<!-- JSON -->
+			<dependency>
+				<groupId>org.codehaus.jackson</groupId>
+				<artifactId>jackson-mapper-lgpl</artifactId>
+				<version>${jackson-mapper-lgpl.version}</version>
+			</dependency>
 
-		<!-- Apache Commons -->
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>${commons-io.version}</version>
-		</dependency>
+			<!-- Apache Commons -->
+			<dependency>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>${commons-io.version}</version>
+			</dependency>
 
-		<!-- Spring Security -->
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-core</artifactId>
-			<version>${org.springsecurity-version}</version>
+			<!-- Spring Security -->
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-core</artifactId>
+				<version>${org.springsecurity-version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-web</artifactId>
+				<version>${org.springsecurity-version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-config</artifactId>
+				<version>${org.springsecurity-version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-taglibs</artifactId>
+				<version>${org.springsecurity-version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-core</artifactId>
+				<version>${mockito-core.version}</version>
+				<scope>test</scope>
+			</dependency>
+
+
+			<dependency>
+				<groupId>xerces</groupId>
+				<artifactId>xercesImpl</artifactId>
+				<version>${xercesImpl.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>asm</groupId>
+				<artifactId>asm</artifactId>
+				<version>${asm.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-fileupload</groupId>
+				<artifactId>commons-fileupload</artifactId>
+				<version>${commons-fileupload.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>javax.validation</groupId>
+				<artifactId>validation-api</artifactId>
+				<version>${validation-api.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.hibernate</groupId>
+				<artifactId>hibernate-validator</artifactId>
+				<version>${hibernate-validator.version}</version>
+			</dependency>
+ 		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${spring.version}</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-web</artifactId>
-			<version>${org.springsecurity-version}</version>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-oxm</artifactId>
+			<version>${spring.version}</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-config</artifactId>
-			<version>${org.springsecurity-version}</version>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+			<version>${spring.version}</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-taglibs</artifactId>
-			<version>${org.springsecurity-version}</version>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>${spring.version}</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-core</artifactId>
-			<version>${mockito-core.version}</version>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-rest-webmvc</artifactId>
+			<version>${spring-data-rest-webmvc.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>${hsqldb.version}</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>${javax.servlet-api.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+			<version>${commons-httpclient.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-library</artifactId>
+			<version>${hamcrest.version}</version>
 			<scope>test</scope>
 		</dependency>
-
-
 		<dependency>
-			<groupId>xerces</groupId>
-			<artifactId>xercesImpl</artifactId>
-			<version>${xercesImpl.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>asm</groupId>
-			<artifactId>asm</artifactId>
-			<version>${asm.version}</version>
-		</dependency>
-				<dependency>
-			<groupId>commons-fileupload</groupId>
-			<artifactId>commons-fileupload</artifactId>
-			<version>${commons-fileupload.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>javax.validation</groupId>
-			<artifactId>validation-api</artifactId>
-			<version>${validation-api.version}</version>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-core</artifactId>
+			<version>${hamcrest.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-validator</artifactId>
-			<version>${hibernate-validator.version}</version>
+			<groupId>junit</groupId>
+			<artifactId>junit-dep</artifactId>
+			<version>${junit-dep.version}</version>
+			<scope>test</scope>
 		</dependency>
 		
 		</dependencies>
 	</dependencyManagement>
-
+	<repositories>
+		<repository>
+			<id>spring-libs-milestone</id>
+			<url>http://repo.springsource.org/libs-milestone</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<id>central</id>
+			<name>Central Repository</name>
+			<url>http://repo.maven.apache.org/maven2</url>
+		</repository>
+	</repositories>
+	<pluginRepositories>
+		<pluginRepository>
+			<releases>
+				<updatePolicy>never</updatePolicy>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<id>central</id>
+			<name>Central Repository</name>
+			<url>http://repo.maven.apache.org/maven2</url>
+		</pluginRepository>
+	</pluginRepositories>
 	<modules>
 		<module>model</module>
 		<module>service-api</module>
@@ -285,6 +387,7 @@
 	</modules>
 	<build>
 		<plugins>
+	
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
