--- a/parent-pom/integration-test/pom.xml
+++ b/parent-pom/integration-test/pom.xml
@@ -86,6 +86,11 @@
 			<artifactId>service-impl</artifactId>
 			<version>0.0.4-SNAPSHOT</version>
 		</dependency>
+			<!-- 	<dependency>
+			<groupId>es.microforum</groupId>
+			<artifactId>service-frontend-soap</artifactId>
+			<version>0.0.4-SNAPSHOT</version>
+		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-rest-webmvc</artifactId>
