--- a/parent-pom/pom.xml
+++ b/parent-pom/pom.xml
@@ -44,6 +44,8 @@
 		<commons-httpclient.version>3.1</commons-httpclient.version>
 		<hamcrest.version>1.3</hamcrest.version>
 		<junit-dep.version>4.10</junit-dep.version>
+		<jaxws-rt.version>2.2.8</jaxws-rt.version>
+		<jaxws-spring.version>1.9</jaxws-spring.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -345,10 +347,25 @@
 			<version>${junit-dep.version}</version>
 			<scope>test</scope>
 		</dependency>
-		
+		<dependency>
+			<groupId>com.sun.xml.ws</groupId>
+			<artifactId>jaxws-rt</artifactId>
+			<version>${jaxws-rt.version}</version>
+		</dependency>
+
+		<!-- Library from java.net, integrate Spring with JAX-WS -->
+		<dependency>
+			<groupId>org.jvnet.jax-ws-commons.spring</groupId>
+			<artifactId>jaxws-spring</artifactId>
+			<version>${jaxws-spring.version}</version>
+		</dependency>		
 		</dependencies>
 	</dependencyManagement>
 	<repositories>
+			<repository>
+			<id>java.net</id>
+			<url>http://download.java.net/maven/2</url>
+		</repository>
 		<repository>
 			<id>spring-libs-milestone</id>
 			<url>http://repo.springsource.org/libs-milestone</url>
@@ -383,6 +400,7 @@
 		<module>service-api</module>
 		<module>service-impl</module>
 		<module>service-frontend</module>
+		<module>service-frontend-soap</module>
 		<module>web-frontend</module>
 	</modules>
 	<build>
