--- a/parent-pom/service-frontend/pom.xml
+++ b/parent-pom/service-frontend/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>es.microforum</groupId>
     <artifactId>parent-pom</artifactId>
-    <version>0.0.4-SNAPSHOT</version>
+    <version>0.0.4</version>
   </parent>
   <artifactId>service-frontend</artifactId>
   <packaging>war</packaging>
@@ -164,19 +164,19 @@
 		<dependency>
 			<groupId>es.microforum</groupId>
 			<artifactId>model</artifactId>
-			<version>0.0.4-SNAPSHOT</version>
+			<version>0.0.4</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>es.microforum</groupId>
 			<artifactId>service-api</artifactId>
-			<version>0.0.4-SNAPSHOT</version>
+			<version>0.0.4</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>es.microforum</groupId>
 			<artifactId>service-impl</artifactId>
-			<version>0.0.4-SNAPSHOT</version>
+			<version>0.0.4</version>
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
